feat: добавить параметры для БД

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 logging.level.ru.yandex.practicum.filmorate.validators=debug
 logging.level.ru.yandex.practicum.filmorate.conrollers=info
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
